--- a/Qbert/Qbert.vcxproj.filters
+++ b/Qbert/Qbert.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="CoilyComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CharacterStates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DiskComponent.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CoilyComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CharacterStates.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
