--- a/Qbert/Qbert.vcxproj
+++ b/Qbert/Qbert.vcxproj
@@ -206,6 +206,7 @@ xcopy "$(SolutionDir)3rdParty\steamworks\redistributable_bin\win64\*.dll" "$(Out
     <ClCompile Include="CharacterComponent.cpp" />
     <ClCompile Include="CharacterStates.cpp" />
     <ClCompile Include="CoilyComponent.cpp" />
+    <ClCompile Include="CoilyStates.cpp" />
     <ClCompile Include="CommandImplementation.cpp" />
     <ClCompile Include="DiskComponent.cpp" />
     <ClCompile Include="FPSComponent.cpp" />
@@ -215,6 +216,7 @@ xcopy "$(SolutionDir)3rdParty\steamworks\redistributable_bin\win64\*.dll" "$(Out
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="QbertComponent.cpp" />
     <ClCompile Include="QbertCurseComponent.cpp" />
+    <ClCompile Include="QbertStates.cpp" />
     <ClCompile Include="RotateComponent.cpp" />
     <ClCompile Include="ScoreComponent.cpp" />
     <ClCompile Include="TileComponent.cpp" />
@@ -223,6 +225,7 @@ xcopy "$(SolutionDir)3rdParty\steamworks\redistributable_bin\win64\*.dll" "$(Out
     <ClInclude Include="CharacterComponent.h" />
     <ClInclude Include="CharacterStates.h" />
     <ClInclude Include="CoilyComponent.h" />
+    <ClInclude Include="CoilyStates.h" />
     <ClInclude Include="CommandImplementation.h" />
     <ClInclude Include="DiskComponent.h" />
     <ClInclude Include="FPSComponent.h" />
@@ -231,6 +234,7 @@ xcopy "$(SolutionDir)3rdParty\steamworks\redistributable_bin\win64\*.dll" "$(Out
     <ClInclude Include="LivesComponent.h" />
     <ClInclude Include="QbertComponent.h" />
     <ClInclude Include="QbertCurseComponent.h" />
+    <ClInclude Include="QbertStates.h" />
     <ClInclude Include="RotateComponent.h" />
     <ClInclude Include="ScoreComponent.h" />
     <ClInclude Include="Sounds.h" />
