--- a/Qbert/Qbert.vcxproj.filters
+++ b/Qbert/Qbert.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="CoilyStates.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
+    <ClCompile Include="SlickSamComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SlickSamStates.cpp">
+      <Filter>Source Files\States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DiskComponent.h">
@@ -123,6 +129,12 @@
       <Filter>Header Files\States</Filter>
     </ClInclude>
     <ClInclude Include="CoilyStates.h">
+      <Filter>Header Files\States</Filter>
+    </ClInclude>
+    <ClInclude Include="SlickSamComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SlickSamStates.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
   </ItemGroup>
