--- a/Qbert/Qbert.vcxproj.filters
+++ b/Qbert/Qbert.vcxproj.filters
@@ -69,14 +69,11 @@
     <ClCompile Include="QbertStates.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
-    <ClCompile Include="CoilyStates.cpp">
+    <ClCompile Include="EnemyStates.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
     <ClCompile Include="SlickSamComponent.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SlickSamStates.cpp">
-      <Filter>Source Files\States</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -128,14 +125,11 @@
     <ClInclude Include="QbertStates.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
-    <ClInclude Include="CoilyStates.h">
+    <ClInclude Include="EnemyStates.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
     <ClInclude Include="SlickSamComponent.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SlickSamStates.h">
-      <Filter>Header Files\States</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
