--- a/Qbert/Qbert.vcxproj.filters
+++ b/Qbert/Qbert.vcxproj.filters
@@ -69,11 +69,14 @@
     <ClCompile Include="QbertStates.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
-    <ClCompile Include="EnemyStates.cpp">
+    <ClCompile Include="CoilyStates.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
     <ClCompile Include="SlickSamComponent.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SlickSamStates.cpp">
+      <Filter>Source Files\States</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -125,11 +128,14 @@
     <ClInclude Include="QbertStates.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
-    <ClInclude Include="EnemyStates.h">
+    <ClInclude Include="CoilyStates.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
     <ClInclude Include="SlickSamComponent.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SlickSamStates.h">
+      <Filter>Header Files\States</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
